feat: 新增机器人判别测试

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: build weapp ci
 on:
   # 监听PUSH和PR
   push:
-    branches: [ main ]
+    branches: [ main, pre ]
   pull_request:
     branches: [ main ]
 
