--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,9 +3,9 @@ name: build weapp ci
 on:
   # 监听PUSH和PR
   push:
-    branches: [ main, pre ]
+    branches: [ pre ]
   pull_request:
-    branches: [ main ]
+    branches: [ dev, pre, main ]
 
 jobs:
   build:
@@ -39,6 +39,10 @@ jobs:
       # 安装upload Dependencies
     - name: Install UploadDist Dependencies
       run: pnpm uploadInstall
+
+      # 执行release脚本
+    - name: release 脚本执行
+      run: pnpm release
 
       # 构建小程序
     - name: Build weapp
