--- a/package.json
+++ b/package.json
@@ -88,8 +88,7 @@
     "typescript": "^4.1.0",
     "webpack": "5.69.0",
     "chalk": "^3.0.0",
-    "exec-sh": "^0.4.0",
-    "inquirer": "^8.2.0"
+    "exec-sh": "^0.4.0"
   },
   "resolutions": {
     "@swc/core": "1.3.6"
