fix: 删除release脚本交互 & dev不生成changelog和git Release

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: build weapp ci
 on:
   # 监听PUSH和PR
   push:
-    branches: [ pre ]
+    branches: [ ]
   pull_request:
     branches: [ dev, pre, main ]
 
