--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,7 @@
 name: build weapp ci
 
 on:
-  # 监听PUSH和PR
-  push:
-    branches: [ ]
+  # 监听PR
   pull_request:
     branches: [ dev, pre, main ]
 
