--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -73,7 +73,7 @@ on:
 
 jobs:
   build:
-    if: github.event.pull_request.merged == true
+    if: github.event_name == 'push' && contains(github.event.head_commit.message, 'Merge pull request')
     # 选择运行在ubuntu
     runs-on: ubuntu-latest
 
