--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,13 +1,13 @@
 name: build weapp ci
 
 on:
-  # 监听PR
-  push:
-    branches:
-      - dev
-      - pre
-      - main
-
+  # 手动run-job
+  workflow_dispatch:
+  # push:
+  #   branches:
+  #     - dev
+  #     - pre
+  #     - main
 jobs:
   build:
     if: github.event_name == 'push' && contains(github.event.head_commit.message, 'Merge pull request')
