fix: 修改构建配置

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,12 @@
     "typeRoots": [
       "node_modules/@types"
     ],
-    "jsxImportSource": "react"
+    "jsxImportSource": "react",
+    "paths": {
+      "src/*": [
+        "./src/*"
+      ]
+    }
   },
   "include": [
     "./src",
