fix: 修复goTo透传参数错误增加默认鉴权 & 响应结构调整
feat: 新增HocWrap权限校验通用组件

fix: 更新镜像源地址

fix: 取消构建依赖提取 & 基础页面搭建

--- a/project.config.json
+++ b/project.config.json
@@ -2,7 +2,7 @@
   "miniprogramRoot": "./dist",
   "projectname": "notifyBoard_C",
   "description": "作业板",
-  "appid": "touristappid",
+  "appid": "wx6836fb3c447f8868",
   "setting": {
     "urlCheck": true,
     "es6": false,
