--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
+    "@babel/plugin-proposal-decorators": "^7.24.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
     "@tarojs/cli": "3.5.11",
     "@tarojs/plugin-terser": "^2.2.10",
@@ -86,6 +87,7 @@
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "exec-sh": "^0.4.0",
+    "prettier": "^3.2.5",
     "react-refresh": "^0.11.0",
     "stylelint": "^14.4.0",
     "typescript": "^4.1.0",
