Revert "feat: 新增HocWrap权限校验通用组件 &  修复goTo透传参数错误增加默认鉴权 & 响应结构调整"

--- a/project.tt.json
+++ b/project.tt.json
@@ -1,7 +1,7 @@
 {
   "miniprogramRoot": "./",
   "projectname": "notifyBoard_C",
-  "appid": "wx6836fb3c447f8868",
+  "appid": "testAppId",
   "setting": {
     "es6": false,
     "minified": false
