feat: Organization initialization

--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
 # 配置要求：必须以TARO_APP_开头否则不可以通过process.env.TARO_APP_XX获得
 
 # 域名
-TARO_APP_DOMAIN="https://hxtia.com:80"
+TARO_APP_DOMAIN="https://mock.apifox.com/m1/4182382-0-default"
