--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "@rematch/core": "^2.2.0",
     "@rematch/immer": "^2.1.3",
     "@rematch/select": "^3.1.2",
-    "@taroify/core": "0.1.0-alpha.1",
+    "@taroify/core": "0.1.5-alpha.0",
+    "@taroify/icons": "0.1.5-alpha.0",
     "@tarojs/components": "3.5.11",
     "@tarojs/helper": "3.5.11",
     "@tarojs/plugin-framework-react": "3.5.11",
